fix: overflow in mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
 	padding: 0;
 	background-color: var(--white);
 	color: var(--black);
+	max-width: 100vw;
 }
 
 .scrollBehaviour {
@@ -49,6 +50,7 @@ body {
 
 .container-body {
 	padding-bottom: 4rem;
+	box-sizing: border-box;
 }
 
 .img-pagenotfound {
